--- a/annex/bugs/bugs.org
+++ b/annex/bugs/bugs.org
@@ -493,6 +493,73 @@ Or modify the desktop file or the desktop custom keyboard shortcut for
 as ~EXEC=env GTL_IM_MODULE= GTK_IM_MODULE= QT_IM_MODULE= XMODIFIERS= emacs %F~ or
 ~env GTL_IM_MODULE= GTK_IM_MODULE= QT_IM_MODULE= XMODIFIERS= emacs~.
 
+** MARKING bug of =large-file-warning-threshold= is nil in some occasions
+:PROPERTIES:
+:CUSTOM_ID: h-ca204a62-9e15-4f3b-ae23-f31b6046a9c5
+:END:
+- State "MARKING"    from "UPDATE"     [2022-02-06 Sun 07:56]
+=large-file-warning-threshold= is nil in some occasions even if we
+bind it in top level.
+
+See below baacktrace:
+
+#+begin_example
+  Debugger entered--Lisp error: (wrong-type-argument number-or-marker-p nil)
+    >(20257471 nil)
+    (or (> (buffer-size) large-file-warning-threshold) (progn (require 'so-long) (let ((so-long-threshold __unreadable-file-long-threshold)) (so-long-detected-long-line-p))))
+    (save-current-buffer (set-buffer buff) (or (> (buffer-size) large-file-warning-threshold) (progn (require 'so-long) (let ((so-long-threshold __unreadable-file-long-threshold)) (so-long-detected-long-line-p)))))
+    (lambda (buff) (save-current-buffer (set-buffer buff) (or (> (buffer-size) large-file-warning-threshold) (progn (require 'so-long) (let ((so-long-threshold __unreadable-file-long-threshold)) (so-long-detected-long-line-p))))))(#<buffer tempfile.txt>)
+    funcall((lambda (buff) (save-current-buffer (set-buffer buff) (or (> (buffer-size) large-file-warning-threshold) (progn (require 'so-long) (let ((so-long-threshold __unreadable-file-long-threshold)) (so-long-detected-long-line-p)))))) #<buffer tempfile.txt>)
+    (if (funcall entropy/emacs-unreadable-buffer-judge-function (current-buffer)) nil (entropy/emacs-basic-smooth-scrolling-mode 1))
+    entropy/emacs-basic-smooth-scrolling-mode-turn-on()
+    (if entropy/emacs-basic-smooth-scrolling-mode (progn (entropy/emacs-basic-smooth-scrolling-mode -1) (entropy/emacs-basic-smooth-scrolling-mode-turn-on)) (entropy/emacs-basic-smooth-scrolling-mode-turn-on))
+    (if (eq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode) nil (if entropy/emacs-basic-smooth-scrolling-mode (progn (entropy/emacs-basic-smooth-scrolling-mode -1) (entropy/emacs-basic-smooth-scrolling-mode-turn-on)) (entropy/emacs-basic-smooth-scrolling-mode-turn-on)))
+    (if entropy/emacs-basic-smooth-scrolling-mode-set-explicitly nil (if (eq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode) nil (if entropy/emacs-basic-smooth-scrolling-mode (progn (entropy/emacs-basic-smooth-scrolling-mode -1) (entropy/emacs-basic-smooth-scrolling-mode-turn-on)) (entropy/emacs-basic-smooth-scrolling-mode-turn-on))))
+    (save-current-buffer (set-buffer buf) (if entropy/emacs-basic-smooth-scrolling-mode-set-explicitly nil (if (eq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode) nil (if entropy/emacs-basic-smooth-scrolling-mode (progn (entropy/emacs-basic-smooth-scrolling-mode -1) (entropy/emacs-basic-smooth-scrolling-mode-turn-on)) (entropy/emacs-basic-smooth-scrolling-mode-turn-on)))) (setq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode))
+    (progn (save-current-buffer (set-buffer buf) (if entropy/emacs-basic-smooth-scrolling-mode-set-explicitly nil (if (eq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode) nil (if entropy/emacs-basic-smooth-scrolling-mode (progn (entropy/emacs-basic-smooth-scrolling-mode -1) (entropy/emacs-basic-smooth-scrolling-mode-turn-on)) (entropy/emacs-basic-smooth-scrolling-mode-turn-on)))) (setq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode)))
+    (if (buffer-live-p buf) (progn (save-current-buffer (set-buffer buf) (if entropy/emacs-basic-smooth-scrolling-mode-set-explicitly nil (if (eq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode) nil (if entropy/emacs-basic-smooth-scrolling-mode (progn (entropy/emacs-basic-smooth-scrolling-mode -1) (entropy/emacs-basic-smooth-scrolling-mode-turn-on)) (entropy/emacs-basic-smooth-scrolling-mode-turn-on)))) (setq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode))))
+    (while --dolist-tail-- (setq buf (car --dolist-tail--)) (if (buffer-live-p buf) (progn (save-current-buffer (set-buffer buf) (if entropy/emacs-basic-smooth-scrolling-mode-set-explicitly nil (if (eq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode) nil (if entropy/emacs-basic-smooth-scrolling-mode (progn ... ...) (entropy/emacs-basic-smooth-scrolling-mode-turn-on)))) (setq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode)))) (setq --dolist-tail-- (cdr --dolist-tail--)))
+    (let ((--dolist-tail-- buffers) buf) (while --dolist-tail-- (setq buf (car --dolist-tail--)) (if (buffer-live-p buf) (progn (save-current-buffer (set-buffer buf) (if entropy/emacs-basic-smooth-scrolling-mode-set-explicitly nil (if (eq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode) nil (if entropy/emacs-basic-smooth-scrolling-mode ... ...))) (setq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode)))) (setq --dolist-tail-- (cdr --dolist-tail--))))
+    (let ((buffers entropy/emacs-basic-smooth-scrolling-global-mode-buffers)) (setq entropy/emacs-basic-smooth-scrolling-global-mode-buffers nil) (let ((--dolist-tail-- buffers) buf) (while --dolist-tail-- (setq buf (car --dolist-tail--)) (if (buffer-live-p buf) (progn (save-current-buffer (set-buffer buf) (if entropy/emacs-basic-smooth-scrolling-mode-set-explicitly nil (if ... nil ...)) (setq entropy/emacs-basic-smooth-scrolling-mode-major-mode major-mode)))) (setq --dolist-tail-- (cdr --dolist-tail--)))))
+    entropy/emacs-basic-smooth-scrolling-global-mode-enable-in-buffers()
+    run-hooks(change-major-mode-after-body-hook after-change-major-mode-hook)
+    normal-mode(t)
+    after-find-file(nil t)
+    find-file-noselect-1(#<buffer tempfile.txt> "/tmp/tempfile.txt" nil nil "/tmp/he..." (878091 41))
+    #f(compiled-function (filename &optional nowarn rawfile wildcards) "Read file FILENAME into a buffer and return the buffer.\nIf a buffer exists visiting FILENAME, return that one, but\nverify that the file has not changed since visited or saved.\nThe buffer is not selected, just returned to the caller.\nOptional second arg NOWARN non-nil means suppress any warning messages.\nOptional third arg RAWFILE non-nil means the file is read literally.\nOptional fourth arg WILDCARDS non-nil means do wildcard processing\nand visit all the matching files.  When wildcards are actually\nused and expanded, return a list of buffers that are visiting\nthe various files." #<bytecode 0x1febf8f6552d>)("/tmp/tempfile.txt")
+    apply(#f(compiled-function (filename &optional nowarn rawfile wildcards) "Read file FILENAME into a buffer and return the buffer.\nIf a buffer exists visiting FILENAME, return that one, but\nverify that the file has not changed since visited or saved.\nThe buffer is not selected, just returned to the caller.\nOptional second arg NOWARN non-nil means suppress any warning messages.\nOptional third arg RAWFILE non-nil means the file is read literally.\nOptional fourth arg WILDCARDS non-nil means do wildcard processing\nand visit all the matching files.  When wildcards are actually\nused and expanded, return a list of buffers that are visiting\nthe various files." #<bytecode 0x1febf8f6552d>) "/tmp/tempfile.txt")
+    (let ((find-file-visit-truename (and (not (equal filename ftruename)) (not (file-directory-p filename))))) (apply orig-func orig-args))
+    (let* ((filename (let* ((path (car orig-args))) (if (and (> (length path) 1) (eq 47 (aref path ...))) (substring path 0 -1) path))) (rest (cdr orig-args)) (ftruename (let* ((path (file-truename filename))) (if (and (> (length path) 1) (eq 47 (aref path ...))) (substring path 0 -1) path)))) (let ((find-file-visit-truename (and (not (equal filename ftruename)) (not (file-directory-p filename))))) (apply orig-func orig-args)))
+    (if (__entropy/emacs-init-tramp-file-p (car orig-args)) (apply orig-func orig-args) (let* ((filename (let* ((path (car orig-args))) (if (and (> ... 1) (eq 47 ...)) (substring path 0 -1) path))) (rest (cdr orig-args)) (ftruename (let* ((path (file-truename filename))) (if (and (> ... 1) (eq 47 ...)) (substring path 0 -1) path)))) (let ((find-file-visit-truename (and (not (equal filename ftruename)) (not (file-directory-p filename))))) (apply orig-func orig-args))))
+    entropy/emacs--dwim-abs-find-file(#f(compiled-function (filename &optional nowarn rawfile wildcards) "Read file FILENAME into a buffer and return the buffer.\nIf a buffer exists visiting FILENAME, return that one, but\nverify that the file has not changed since visited or saved.\nThe buffer is not selected, just returned to the caller.\nOptional second arg NOWARN non-nil means suppress any warning messages.\nOptional third arg RAWFILE non-nil means the file is read literally.\nOptional fourth arg WILDCARDS non-nil means do wildcard processing\nand visit all the matching files.  When wildcards are actually\nused and expanded, return a list of buffers that are visiting\nthe various files." #<bytecode 0x1febf8f6552d>) "/tmp/tempfile.txt")
+    apply(entropy/emacs--dwim-abs-find-file #f(compiled-function (filename &optional nowarn rawfile wildcards) "Read file FILENAME into a buffer and return the buffer.\nIf a buffer exists visiting FILENAME, return that one, but\nverify that the file has not changed since visited or saved.\nThe buffer is not selected, just returned to the caller.\nOptional second arg NOWARN non-nil means suppress any warning messages.\nOptional third arg RAWFILE non-nil means the file is read literally.\nOptional fourth arg WILDCARDS non-nil means do wildcard processing\nand visit all the matching files.  When wildcards are actually\nused and expanded, return a list of buffers that are visiting\nthe various files." #<bytecode 0x1febf8f6552d>) "/tmp/tempfile.txt")
+    find-file-noselect("/tmp/tempfile.txt")
+    (let* ((fnew-p nil) (fname (if (file-exists-p filename) filename (setq fnew-p t) (if do-read (user-error "[error] Please do read from an exist file!") (hexie/subr-touch-file filename) filename))) (inhibit-read-only t) (large-file-warning-threshold nil) (buffer (find-file-noselect filename))) (if (null do-read) (if (or fnew-p (or force-renew (yes-or-no-p "Renew it? "))) (progn (save-current-buffer (set-buffer buffer) (delete-region (point-min) (point-max)) (hexie/subr-insert-sexp hexie/api-core-database) (save-buffer)))) (save-current-buffer (set-buffer buffer) (goto-char (point-min)) (setq hexie/api-core-database (hexie/subr-receive-sexp)))) (kill-buffer buffer))
+    hexie/api-core-database-save/read("/tmp/tempfile.txt" t)
+    funcall-interactively(hexie/api-core-database-save/read "/tmp/tempfile.txt" t)
+    call-interactively(hexie/api-core-database-save/read record nil)
+    command-execute(hexie/api-core-database-save/read record)
+    counsel-M-x-action("hexie/api-core-database-save/read")
+    ivy-call()
+    #f(compiled-function (arg1 arg2 &rest rest) "Read a string in the minibuffer, with completion.\n\nPROMPT is a string, normally ending in a colon and a space.\n`ivy-count-format' is prepended to PROMPT during completion.\n\nCOLLECTION is either a list of strings, a function, an alist, or\na hash table, supplied for `minibuffer-completion-table'.\n\nPREDICATE is applied to filter out the COLLECTION immediately.\nThis argument is for compatibility with `completing-read'.\n\nWhen REQUIRE-MATCH is non-nil, only members of COLLECTION can be\nselected.\n\nIf INITIAL-INPUT is non-nil, then insert that input in the\nminibuffer initially.\n\nHISTORY is a name of a variable to hold the completion session\nhistory.\n\nKEYMAP is composed with `ivy-minibuffer-map'.\n\nPRESELECT, when non-nil, determines which one of the candidates\nmatching INITIAL-INPUT to select initially.  An integer stands\nfor the position of the desired candidate in the collection,\ncounting from zero.  Otherwise, use the first occurrence of\nPRESELECT in the collection.  Comparison is first done with\n`equal'.  If that fails, and when applicable, match PRESELECT as\na regular expression.\n\nDEF is for compatibility with `completing-read'.\n\nUPDATE-FN is called each time the candidate list is re-displayed.\n\nWhen SORT is non-nil, `ivy-sort-functions-alist' determines how\nto sort candidates before displaying them.\n\nACTION is a function to call after selecting a candidate.\nIt takes one argument, the selected candidate. If COLLECTION is\nan alist, the argument is a cons cell, otherwise it's a string.\n\nMULTI-ACTION, when non-nil, is called instead of ACTION when\nthere are marked candidates. It takes the list of candidates as\nits only argument. When it's nil, ACTION is called on each marked\ncandidate.\n\nUNWIND is a function of no arguments to call before exiting.\n\nRE-BUILDER is a function transforming input text into a regex\npattern.\n\nMATCHER is a function which can override how candidates are\nfiltered based on user input.  It takes a regex pattern and a\nlist of candidates, and returns the list of matching candidates.\n\nDYNAMIC-COLLECTION is a boolean specifying whether the list of\ncandidates is updated after each input by calling COLLECTION.\n\nEXTRA-PROPS is a plist that can be used to store\ncollection-specific session-specific data.\n\nCALLER is a symbol to uniquely identify the caller to `ivy-read'.\nIt is used, along with COLLECTION, to determine which\ncustomizations apply to the current completion session." #<bytecode 0x155ee0a9b5c5>)("M-x " [__adv/around/entropy/emacs-individual-hydra--entropy/emacs-hydra-hollow-top-dispatch--hydra-category-1-caller/hl-todo-previous-and-exit/with-pretty-hydra-hack localp ada-ref-man epg-context-signers locals 0 tramp-compat-exec-path xselect--int-to-cons __adv/around/entropy/emacs-individual-hydra--entropy/emacs-individual-hydra-random-name-of-6--hydra-category-0-caller/body/__use-posframe-show avy-words epg--status-VALIDSIG all-the-icons-ivy-rich--project-file-path eemacs-use-package/hydra-hollow-defer-parse/for-shackle/judger-id_17 eemacs-use-package/hydra-hollow-defer-parse/for-shackle/judger-id_18 org-emphasis-regexp-components Sarasa\ Fixed\ J tramp-gvfs-handle-copy-file tramp-do-copy-or-rename-file-out-of-band entropy/emacs-org-keymap-group-$common-open hexie/subr-org-subhead-exists-p _message hexie/api-core-registry-pos-obj eemacs-use-package/hydra-hollow-defer-parse/for-entropy-open-with/judger-id_59 Backward\ 1\ Year cl-print--preprocess Find\ file\ in\ directory selinux-context Insert\ Diary\ Entry wicon archive_type conf-space-mode-map 0 cl--struct-epg-signature-p entropy/cl-read-file-name \" cpbdins $ test-command Info-apropos-find-file \' :name-match M-kp-down tramp-cache-data org-babel-results-keyword eglot-autoshutdown dont-create not-at-beginning-of-line f-empty\? expired calendar-debug-sexp ...] :predicate #f(compiled-function (sym) #<bytecode 0x155ee121eced>) :require-match t :history counsel-M-x-history :action counsel-M-x-action :keymap (keymap (67108908 . counsel--info-lookup-symbol) (67108910 . counsel-find-symbol)) :initial-input nil :caller counsel-M-x)
+    apply(#f(compiled-function (arg1 arg2 &rest rest) "Read a string in the minibuffer, with completion.\n\nPROMPT is a string, normally ending in a colon and a space.\n`ivy-count-format' is prepended to PROMPT during completion.\n\nCOLLECTION is either a list of strings, a function, an alist, or\na hash table, supplied for `minibuffer-completion-table'.\n\nPREDICATE is applied to filter out the COLLECTION immediately.\nThis argument is for compatibility with `completing-read'.\n\nWhen REQUIRE-MATCH is non-nil, only members of COLLECTION can be\nselected.\n\nIf INITIAL-INPUT is non-nil, then insert that input in the\nminibuffer initially.\n\nHISTORY is a name of a variable to hold the completion session\nhistory.\n\nKEYMAP is composed with `ivy-minibuffer-map'.\n\nPRESELECT, when non-nil, determines which one of the candidates\nmatching INITIAL-INPUT to select initially.  An integer stands\nfor the position of the desired candidate in the collection,\ncounting from zero.  Otherwise, use the first occurrence of\nPRESELECT in the collection.  Comparison is first done with\n`equal'.  If that fails, and when applicable, match PRESELECT as\na regular expression.\n\nDEF is for compatibility with `completing-read'.\n\nUPDATE-FN is called each time the candidate list is re-displayed.\n\nWhen SORT is non-nil, `ivy-sort-functions-alist' determines how\nto sort candidates before displaying them.\n\nACTION is a function to call after selecting a candidate.\nIt takes one argument, the selected candidate. If COLLECTION is\nan alist, the argument is a cons cell, otherwise it's a string.\n\nMULTI-ACTION, when non-nil, is called instead of ACTION when\nthere are marked candidates. It takes the list of candidates as\nits only argument. When it's nil, ACTION is called on each marked\ncandidate.\n\nUNWIND is a function of no arguments to call before exiting.\n\nRE-BUILDER is a function transforming input text into a regex\npattern.\n\nMATCHER is a function which can override how candidates are\nfiltered based on user input.  It takes a regex pattern and a\nlist of candidates, and returns the list of matching candidates.\n\nDYNAMIC-COLLECTION is a boolean specifying whether the list of\ncandidates is updated after each input by calling COLLECTION.\n\nEXTRA-PROPS is a plist that can be used to store\ncollection-specific session-specific data.\n\nCALLER is a symbol to uniquely identify the caller to `ivy-read'.\nIt is used, along with COLLECTION, to determine which\ncustomizations apply to the current completion session." #<bytecode 0x155ee0a9b5c5>) ("M-x " [__adv/around/entropy/emacs-individual-hydra--entropy/emacs-hydra-hollow-top-dispatch--hydra-category-1-caller/hl-todo-previous-and-exit/with-pretty-hydra-hack localp ada-ref-man epg-context-signers locals 0 tramp-compat-exec-path xselect--int-to-cons __adv/around/entropy/emacs-individual-hydra--entropy/emacs-individual-hydra-random-name-of-6--hydra-category-0-caller/body/__use-posframe-show avy-words epg--status-VALIDSIG all-the-icons-ivy-rich--project-file-path eemacs-use-package/hydra-hollow-defer-parse/for-shackle/judger-id_17 eemacs-use-package/hydra-hollow-defer-parse/for-shackle/judger-id_18 org-emphasis-regexp-components Sarasa\ Fixed\ J tramp-gvfs-handle-copy-file tramp-do-copy-or-rename-file-out-of-band entropy/emacs-org-keymap-group-$common-open hexie/subr-org-subhead-exists-p _message hexie/api-core-registry-pos-obj eemacs-use-package/hydra-hollow-defer-parse/for-entropy-open-with/judger-id_59 Backward\ 1\ Year cl-print--preprocess Find\ file\ in\ directory selinux-context Insert\ Diary\ Entry wicon archive_type conf-space-mode-map 0 cl--struct-epg-signature-p entropy/cl-read-file-name \" cpbdins $ test-command Info-apropos-find-file \' :name-match M-kp-down tramp-cache-data org-babel-results-keyword eglot-autoshutdown dont-create not-at-beginning-of-line f-empty\? expired calendar-debug-sexp ...] :predicate #f(compiled-function (sym) #<bytecode 0x155ee121eced>) :require-match t :history counsel-M-x-history :action counsel-M-x-action :keymap (keymap (67108908 . counsel--info-lookup-symbol) (67108910 . counsel-find-symbol)) :initial-input nil :caller counsel-M-x))
+    ivy-read("M-x " [__adv/around/entropy/emacs-individual-hydra--entropy/emacs-hydra-hollow-top-dispatch--hydra-category-1-caller/hl-todo-previous-and-exit/with-pretty-hydra-hack localp ada-ref-man epg-context-signers locals 0 tramp-compat-exec-path xselect--int-to-cons __adv/around/entropy/emacs-individual-hydra--entropy/emacs-individual-hydra-random-name-of-6--hydra-category-0-caller/body/__use-posframe-show avy-words epg--status-VALIDSIG all-the-icons-ivy-rich--project-file-path eemacs-use-package/hydra-hollow-defer-parse/for-shackle/judger-id_17 eemacs-use-package/hydra-hollow-defer-parse/for-shackle/judger-id_18 org-emphasis-regexp-components Sarasa\ Fixed\ J tramp-gvfs-handle-copy-file tramp-do-copy-or-rename-file-out-of-band entropy/emacs-org-keymap-group-$common-open hexie/subr-org-subhead-exists-p _message hexie/api-core-registry-pos-obj eemacs-use-package/hydra-hollow-defer-parse/for-entropy-open-with/judger-id_59 Backward\ 1\ Year cl-print--preprocess Find\ file\ in\ directory selinux-context Insert\ Diary\ Entry wicon archive_type conf-space-mode-map 0 cl--struct-epg-signature-p entropy/cl-read-file-name \" cpbdins $ test-command Info-apropos-find-file \' :name-match M-kp-down tramp-cache-data org-babel-results-keyword eglot-autoshutdown dont-create not-at-beginning-of-line f-empty\? expired calendar-debug-sexp ...] :predicate #f(compiled-function (sym) #<bytecode 0x155ee121eced>) :require-match t :history counsel-M-x-history :action counsel-M-x-action :keymap (keymap (67108908 . counsel--info-lookup-symbol) (67108910 . counsel-find-symbol)) :initial-input nil :caller counsel-M-x)
+    counsel-M-x()
+    funcall-interactively(counsel-M-x)
+    call-interactively(counsel-M-x nil nil)
+    command-execute(counsel-M-x)
+
+#+end_example
+
+Its main cause that we patched =turn-on-font-lock= with
+=entropy/emacs--supress-fontlock-mode=, why? maybe some clojure issue?
+
+So that we now temporally fix it by using an
+=entropy/emacs-large-file-warning-threshold= top level declaration to
+avoid it and bind =large-file-warning-threshold= value to its value at
+init time.
+
+
 * COMMENT Local Varaibles
 :PROPERTIES:
 :CUSTOM_ID: h-550f1e2d-23da-47d3-98e1-cd8be05baa7d
