--- a/annex/bugs/bugs.org
+++ b/annex/bugs/bugs.org
@@ -571,6 +571,8 @@ Error: HTML rendering failed: args-out-of-range, (*Newsticker Item* #<marker at 
 
 This bug when hint item in *Virtual Feeds* list.
 
+Issues on emacs versions: 27.2, 28.0.91
+
 *Reproduction:*
 
 Run the bash file [[./h-936e4fb3-57d7-4958-89d9-a1cdfb52c495/start.sh]]
